global.css
* {
  box-sizing: border-box;
}

@font-face {
    font-family: 'Titillium Web';
    src: url(./TitilliumWeb-Light.ttf) format('truetype'),
         url(./TitilliumWeb-LightItalic.ttf) format('truetype');
}

@font-face {
    font-family: 'noto sans';
    src: url(./NotoSans-Regular.ttf) format('truetype');
}

html,body { height:100%; }

body {
  margin: 0px;
  font-family: 'noto sans';
  background-color: #eee
}

a {
  color: #f7901e;
}

.body-container {
  position: relative;
  margin: 0 auto;
  max-width: 100em;
  min-height: 100%;
  background-color: #fff
}

.nav {
  height: 50px;
  width: 100%;
  background-color: #841c44;
  position: relative;
}

.nav > .nav-header {
  margin-left: 3%;
  display: inline;
}

.nav > .nav-header > .nav-title {
  display: inline-block;
  font-size: 24px;
  color: #fff;
  padding: 6px 10px 10px 10px;
  font-family: 'Titillium Web', sans-serif;
  font-style: italic;
  font-weight: 300;
  text-decoration: none;
}

.nav-title > a {
  color: #fff;
  text-decoration: none;
  white-space: nowrap;
  border: 0;
}

.nav > .nav-btn {
  display: none;
}

.nav > .nav-links {
  margin-right: 3%;
  display: inline;
  float: right;
  font-size: 18px;
  font-family: 'Titillium Web', sans-serif;
  font-weight: 300;
}

.nav > .nav-links > a {
  display: inline-block;
  padding: 11px 10px 7px 10px;
  text-decoration: none;
  color: #ffffff;
}

.nav > .nav-links > a:hover {
  border-bottom: 4px solid #f7901e
}

.nav > #nav-check {
  display: none;
}

.container {
  display: grid;
  grid-template-columns: 25vw auto;
  grid-template-rows: auto;
  padding-bottom: 3em;
}

.container > a {
  color: #f7901e;
}

.header {
  grid-column: span 2;
}

.content {
  position: relative;
  right: 0;
  flex: 1;
  padding: 3vw;
}

.singlecolumncontent {
  margin: 0 auto;
  padding: 10%;
  text-align: center;
  max-width: 50em;
}

.leftbar {
  padding: 3vw;
  text-align: center;
  max-width: 40em;
}

.footer {
  position: absolute;
  bottom: 0;
  right: 0;
  width: 100%;
  padding: 1em;
  text-align: center;
  font-size: 1em;
  background-color: #6d6a75;
  color: white;
}

.footer > a {
  color: #f7b04e
}

@media (max-width:930px) {
  .container {
    display: flex;
    flex-direction: column-reverse;
    min-height: 100vh;
  }

  .content {
    padding: 3vw;
  }

  .container {
    padding-bottom: 0em;
  }

  .leftbar {
    background-color: #eee;
    padding-top: 3em;
    padding-bottom: 3em;
    max-width: 100vw;

  }

  .footer {
    position: relative;
  }

  .nav {
    z-index: 99;
  }

  .nav > .nav-btn {
    display: inline-block;
    position: absolute;
    right: 0px;
    top: 0px;
  }
  .nav > .nav-btn > label {
    display: inline-block;
    width: 65px;
    height: 50px;
    padding: 13px;
  }
  .nav > .nav-btn > label:hover {
    background-color: rgba(0, 0, 0, 0.3);
  }

  .nav > .nav-links > a:hover {
    border-bottom: 0px solid #f7901e
  }
  .nav > .nav-btn > label > span {
    display: block;
    width: 25px;
    height: 10px;
    border-top: 2px solid #eee;
  }
  .nav > .nav-links {
    margin-right: 0%;
    position: absolute;
    display: block;
    width: 40%;
    background-color: #333;
    height: 0px;
    transition: all 0.15s ease-in;
    overflow-y: hidden;
    top: 50px;
    right: 0px;
  }
  .nav > .nav-links > a {
    display: block;
    float: right;
    text-align: right;
    right: 0px;
    width: 40vw;
    height: 2.5em;
  }
  .nav > #nav-check:not(:checked) + .nav-links {
    height: 0px;
  }
  .nav > #nav-check:checked + .nav-links {
    height: auto;
    width: auto*2;
    overflow-y: visible;
  }

  .nav > #nav-check:checked {
    position: fixed;
  }
}

